# telegram2photoprism

./: .env.example  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  compose.simple.yaml  compose.telegram-bot-server.yaml  docker-compose.yml  release-docker.sh  todo.md
.github/workflows/: ci.yml  release-binary.yaml  release-docker.yaml  release.yaml  tests.yml
resources/locales/: en.json  ru.json
src/: lib.rs  main.rs  photo_service.rs  progress.rs
tests/: photoprism_api_test.rs  photoprism_container.rs
